# chaos-game

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
chaos-game-macros/: Cargo.toml  README.md
chaos-game-macros/src/: lib.rs
src/: cli.rs  colour_type.rs  fractal_generator.rs  fractal_settings.rs  lib.rs  main.rs  polygon_point.rs  utils.rs  vec2.rs
src/rules/: default.rs  mod.rs  no_repeats.rs  star.rs
src/types/: colour_type.rs  fractal_settings.rs  mod.rs  vec2.rs  vertex.rs
