[package]
name = "chaos-game"
version = "0.1.1"
edition = "2021"
description = "A simple command-line application for generating fractals using the 'Chaos Game' algorithm."

[dependencies]
rand = "0.9.2"
image = "0.25.6"
indicatif = "0.18.0"
clap = { version = "4.5.41", features = ["derive"] }
chaos-game-macros = { path = "chaos-game-macros" }
inventory = "0.3.20"