[package]
name = "chaos-game-macros"
version = "0.1.1"
edition = "2021"
description = "Procedural macros for the chaos-game crate."
license = "MIT"
repository = "https://github.com/benjaminrall/chaos-game/"
homepage = "https://github.com/benjaminrall/chaos-game/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
inventory = "0.3.20"